# giggle

./: .gitignore  Makefile.am  NEWS  acinclude.m4  autogen.sh  configure.ac  giggle.doap
data/: .gitignore  Makefile.am  giggle.desktop.in  main-window.ui
libgiggle/: Makefile.am  giggle-author.c  giggle-dispatcher.c  giggle-ref.c  giggle-ref.h  giggle-remote.c  giggle-revision.c  giggle-revision.h
libgiggle-git/: Makefile.am  giggle-git-config.c  giggle-git-ignore.c  giggle-git-ignore.h  giggle-git-log.c  giggle-git-revisions.c  giggle-git-revisions.h  giggle-git.c  giggle-git.h
plugins/: Makefile.am  giggle-personal-details-window.c  giggle-view-terminal.c
po/: ChangeLog  LINGUAS  POTFILES.in  cs.po  de.po  es.po  fr.po  gl.po  hu.po  nb.po  pa.po  pl.po  ru.po  sl.po
src/: Makefile.am  eggfindbar.c  giggle-avatar-image.c  giggle-diff-view.c  giggle-diff-window.c  giggle-file-list.c  giggle-graph-renderer.c  giggle-helpers.c  giggle-input-dialog.c  giggle-label-action.c  giggle-main.c  giggle-remote-editor.c  giggle-remote-editor.h  giggle-remotes-view.c  giggle-rev-list-view.c  giggle-revision-view.c  giggle-short-list.c  giggle-view-diff.c  giggle-view-file.c  giggle-view-history.c  giggle-view-history.h  giggle-window.c  giggle-window.h  ige-mac-menu.c  test-dispatcher.c
test/: Makefile.am  test_gtkbuilder_file_validation.sh
